--- a/src/app/commentaire/commentaire.page.html
+++ b/src/app/commentaire/commentaire.page.html
@@ -16,8 +16,8 @@
   <div class="con">
     <ion-row>
       <ion-col>
-        <ion-card class="crd" >
-          <ion-card-content style="text-align: center" style="font-size: large;">
+        <ion-card class="crd">
+          <ion-card-content style="text-align: center; font-size: large;">
             {{contenu_ide}}
           </ion-card-content>
         </ion-card>
