--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -8,7 +8,7 @@
     <ion-tab-button tab="notification">
       <ion-icon name="notifications-outline"></ion-icon>
       <ion-label>Notification</ion-label>
-      <ion-badge color="danger">10</ion-badge>
+      <!-- <ion-badge color="danger">10</ion-badge> -->
     </ion-tab-button>
 
     <ion-tab-button tab="profil">
