--- a/src/app/ministere/ministere.page.html
+++ b/src/app/ministere/ministere.page.html
@@ -39,6 +39,7 @@
         </ion-card>
       </ion-col>
     </ion-row>
+    <div style="text-align: center; font-weight: bolder; font-size: x-large;">Partager votre idée ou avis ici</div>
 <div style="width: 98%; margin-left: auto; margin-right: auto; box-shadow: 6%; border: 2%;">
     <div class="" *ngFor="let ide of ide, let i=index">
       <div class="card mt-2">
