--- a/src/app/accueil/accueil.page.html
+++ b/src/app/accueil/accueil.page.html
@@ -41,13 +41,13 @@
       </div>
       <div class="carousel-inner cc">
         <div class="carousel-item active">
-          <img src="../../assets/images/im1.jpeg" class="" alt="..." />
+          <img src="../../assets/images/pb.png" class="" alt="..." />
         </div>
         <div class="carousel-item">
-          <img src="../../assets/images/im2.jpeg" class="" alt="..." />
+          <img src="../../assets/images/pubb.jpg" class="" alt="..." />
         </div>
         <div class="carousel-item">
-          <img src="../../assets/images/im3.jpeg" class="" alt="..." />
+          <img src="../../assets/images/pubbb.png" class="" alt="..." />
         </div>
       </div>
     </div>
@@ -89,7 +89,7 @@
             <ion-card-header>
               <div class="min" style="text-align: center;">
               <img class="min1" src="{{minist.image}}" srcset="" style="margin-bottom: 3%;"/>
-              <ion-card-subtitle>{{minist.libelle}}</ion-card-subtitle>
+              <ion-card-subtitle style="margin-top: 3px; font: 1em sans-serif;">{{minist.libelle}}</ion-card-subtitle>
             </div>
             </ion-card-header>
           </ion-card>
